<resources>
    <string name="app_name">PronuntiApp Therapist</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Don\'t have an account? Sign in!</string>
    <string name="hint_password">Type your password &#8230;</string>
    <string name="hint_cognome">Type your first name &#8230;</string>
    <string name="hint_nome">Type your last name &#8230;</string>
    <string name="hint_email">Type your e-mail &#8230;</string>
    <string name="welcome">"Welcome,\n%1s"</string>
    <string name="action_sign_in_short">"Sign in"</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Password must have at least 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_out">Logout</string>
    <string name="invalid_input">Invalid input</string>
    <string name="registered_users">Registered users: %1d.</string>
    <string name="image_exercises_land_text">Naming exercises</string>
    <string name="users_table_h1">Email</string>
    <string name="users_table_h2">First name</string>
    <string name="users_table_h3">Last name</string>
    <string name="submit">Submit</string>
    <string name="upload">Upload</string>
    <string name="fill_fields">Fill in all the required fields</string>
    <string name="exercise_added">Exercise added successfully</string>
    <string name="exercise_not_added">Error! The exercise was not added</string>
    <string name="no_exercises">There are no exercises in the system</string>
    <!-- AddImageExercise -->
    <string name="textViewExerciseName_text">Exercise name</string>
    <string name="editTextImageExerciseName_hint">Type exercise name</string>
    <string name="add_exercise">Add exercise</string>
    <string name="textViewExerciseDescription_text">Description</string>
    <string name="textViewSubmitImage_text">Upload image</string>
    <string name="editTextExerciseDescription_text">Enter exercise description</string>
    <!--  -->

    <!-- ManageExercises -->
    <string name="image_exercises">Manage image naming exercises</string>
    <string name="audio_seq_repeat">Manage exercises by repeating sequences of words</string>
    <string name="image_recognition">Manage minimal pair recognition exercises</string>
    <!--  -->

    <!-- AddImageRecognitionExercise-->
    <string name="txt_correct_image">Upload image containing the correct answer</string>
    <string name="txt_alt_image">Upload alternative image</string>
    <string name="txt_audio">Record response</string>
    <string name="rec_start">Start</string>
    <string name="rec_stop">Stop</string>
    <string name="txt_upload_button_correct_img">Upload image</string>
    <string name="txt_upload_button_alt_img">Upload</string>
    <!--  -->

    <!-- ManageImageRecognitionExercises-->
    <string name="txt_manage_image_recognition_land">Minimal pair recognition exercises </string>
    <!-- -->

    <!-- AddImageRecognitionWaitUploadFragment-->
    <string name="txt_wait">Upload completion in progress &#8230;</string>
    <string name="txt_upload_complete">Upload completed</string>

    <!-- ManageAudioExercises-->
    <string name="txt_audio_exercises_land">Word sequence repetition exercises</string>
    <string name="audio_exercise_play">Play</string>
    <string name="audio_exercise_stop">Stop</string>
    <!-- -->

    <!-- ManageParents-->
    <string name="txt_parents_list_desc">Parents list</string>
    <string name="no_parents">There are no parents present in the system</string>
    <!-- -->

    <!-- NavBar-->
    <string name="therapist_home_page">Home</string>
    <string name="therapist_parents_page">Parents</string>
    <string name="therapist_exercises_page">Exercises</string>
    <string name="therapist_appointments_page">Appointments</string>
    <!-- Exercise details -->
    <string name="ex_details_land_txt">Exercise details</string>
    <string name="txt_image">Image</string>
    <string name="correct_img_txt">Corrected image</string>
    <string name="alt_img_txt">Alternative image</string>
    <string name="txt_audio_details">Audio</string>
    <string name="txt_exercise_name">Exercise name</string>
    <string name="txt_exercise_description">Exercise description</string>
    <string name="assign_exercise_txt">Assign exercise</string>
    <!-- AssignExercise -->
    <string name="txt_choose_parent">Choose the child\'s parent</string>
    <string name="txt_start_date">Choose start date</string>
    <string name="txt_end_date">Choose end date</string>
    <string name="wrong_date">Error: start date > end date</string>
    <!-- ViewParentAssignments -->
    <string name="txt_view_assigned_lang">Assigned exercises</string>
    <!-- Appointments -->
    <string name="nav_bar_appointments_txt">Appointments</string>
    <string name="no_appointments">You don\'t have any appointments</string>
    <string name="appointments_land_txt">Appointment list</string>
    <string name="appointment_date_txt">Appointment date</string>
    <string name="appointment_parent">Parent</string>
    <string name="btn_add_appointment_txt">Add appointment</string>
    <string name="appointment_check_txt">Appointment approved</string>
    <!-- AddAppointment -->
    <string name="choose_appointment_date">Choose appointment date</string>
    <!-- ChooseReward -->
    <string name="choose_reward_land_txt">Choose reward</string>
    <string name="reward_img_txt">Image</string>
    <string name="reward_video_txt">Video</string>
    <string name="reward_txt">Phrase</string>
    <string name="reward_source_txt">Insert content</string>
    <!-- -->

    <!-- Permissions -->
    <string name="permission_not_granted"> not allowed. Activate it from settings to use the app.</string>

    <!-- AssignmentAnswers -->
    <string name="txt_assignment_answer_date">Answered</string>
    <string name="txt_assignment_answers_land">Answers</string>
    <string name="txt_assignment_answer_correct">Correct answer</string>
    <string name="txt_assignment_btn_check">Mark as completed</string>
    <!--  -->

    <!-- TherapistHome -->
    <string name="txt_no_appointments_scheduled">You don\'t have any appointments scheduled.</string>
    <string name="txt_appointments_scheduled"> appointments scheduled.</string>
    <string name="txt_no_unverified_assignments"> You don\'t have any assignments to check.</string>
    <string name="txt_unverified_assignments"> assignments to check.</string>
    <!--  -->
</resources>