<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.assignment.AssignExercise">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_margin="20dp"
        android:text="@string/txt_choose_parent" />

    <GridView
        android:id="@+id/gridViewParents"
        android:nestedScrollingEnabled="true"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:numColumns="1"
        android:verticalSpacing="10dp"
        android:layout_height="400dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_start_date"
            android:layout_margin="5dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/buttonEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_end_date"
            android:layout_margin="5dp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="@string/assign_exercise_txt" />

</LinearLayout>